--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <button class="btn btn--new">🔁Try Again</button>
         <button class="btn btn--roll">🎲Roll Dice</button>
         <button class="btn btn--hold">🕹️Hold</button>
-        <img src="images/dice-1.png" alt="1" class="diceImage dice1 hidden">
-        <img src="images/dice-2.png" alt="2" class="diceImage dice2 hidden">
-        <img src="images/dice-3.png" alt="3" class="diceImage dice3 hidden">
-        <img src="images/dice-4.png" alt="4" class="diceImage dice4 hidden">
-        <img src="images/dice-5.png" alt="5" class="diceImage dice5 hidden">
-        <img src="images/dice-6.png" alt="6" class="diceImage dice6">
+        <img src="dice-1.png" alt="1" class="diceImage dice1 hidden">
+        <img src="dice-2.png" alt="2" class="diceImage dice2 hidden">
+        <img src="dice-3.png" alt="3" class="diceImage dice3 hidden">
+        <img src="dice-4.png" alt="4" class="diceImage dice4 hidden">
+        <img src="dice-5.png" alt="5" class="diceImage dice5 hidden">
+        <img src="dice-6.png" alt="6" class="diceImage dice6">
     </main>
     <div>
         <button class="btn1">📕RULES📕</button>
